# cpp-deps

./: .gitignore  CMakeLists.txt  README.md  build-deps-win.bat  build-unix.sh  build-win.bat
src/: main.cpp
src/sample-datacenter/: CMakeLists.txt  SampleDataCenter.h
src/sample-main/: CMakeLists.txt  main.cpp
src/sample-pb/: CMakeLists.txt  Sample.cpp  SamplePB.cpp  general-cpp.bat
src/sample-pb-exe/: CMakeLists.txt  main.cpp  main.h
src/sample-tools/: CMakeLists.txt  SampleTools.cpp  SampleTools.h
